[package]
name = "syntesuite"
version = "0.4.0"
edition = "2021"
authors = ["Franklin Delehelle <delehelle@ens.fr>"]
license = "CECILL-C"
description = "TODO"
homepage = "https://github.com/delehef/syntesuite"
repository = "https://github.com/delehef/syntesuite"
readme = "CHANGELOG.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
colored = "2.0"
flate2 = "1.0"
log = "0.4"
regex = "1.6"
rusqlite = "0.26.1" # don't update me for Guix
thiserror = "1.0"

[package.metadata.release]
tag-prefix = ""
publish = false
pre-release-hook = ["git-cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
allow-branch = ["master"]
